<resources>
    <string name="app_name">App La Casa del Bordadito</string>

    <string name="default_web_client_id">80990464608-k5oo9unoqrtee4sjnorqdokc950jfm8l.apps.googleusercontent.com</string>

    <string name="Titulo_app">La Casa del Bordadito</string>

    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Cafe">Cafe</string>
    <string name="Item_Taller">Taller</string>
    <string name="Item_Bordado">Bordado</string>
    <string name="Item_Cuenta">Cuenta</string>

    <string name="TituloRL">Titulo</string>

    <string name="Ingresar_email">Ingresar con Email</string>
    <string name="Ingresar_google">Ingresar con Google</string>

    <string name="Txt_login">Login de usuario</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarme">REGISTRARME</string>

    <string name="Txt_registro">Registro de usuario</string>
    <string name="Et_r_password">Repetir contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <string name="cafe_catalog_title">Catálogo de Cafés</string>

    <!-- Bordado -->
    <string name="Titulo_catalogo_bordado">Catálogo de Bordados</string>
    <string name="Btn_anadir_bordado">Añadir</string>
    <string name="Titulo_bordando_patron">Bordando Patrón</string>
    <string name="Btn_titulo_info_punto_cruz">Información de bordados</string>
    <string name="Btn_reiniciar_patron">Reiniciar</string>

    <string name="Txt_progreso">Progreso</string>


    <!-- Carrito -->
    <string name="Titulo_carrito">Mi Carrito</string>
    <string name="Txt_total_pagar_numero">0.00 MXN</string>
    <string name="Txt_total_pagar">Total a pagar</string>
    <string name="Btn_confirmar_compra">Confirmar Compra</string>
    <string name="Btn_seguir_comprando">Seguir comprando</string>

    <!-- Detalle cafe -->
    <string name="Txt_tamano">Elige el tamaño</string>

    <!-- Historial -->
    <string name="Titulo_historial">Historial de Compras</string>
    <string name="Titulo_detalle_compra">Detalle de Compra</string>
    <string name="Label_resumen_orden">RESUMEN DE LA ORDEN</string>
    <string name="Label_productos_comprados">PRODUCTOS COMPRADOS</string>
    <string name="Txt_folio">Folio: %1$s</string>
    <string name="Txt_fecha">Fecha: %1$s</string>
    <string name="Txt_pago">Pago: %1$s</string>
    <string name="Txt_total_historial">Total: %1$s</string>

    <!-- QR -->
    <string name="Titulo_qr">Ticket de Compra</string>
    <string name="Txt_info">Resumen del pedido</string>
    <string name="Txt_compra_exitosa">¡Compra Exitosa!</string>
    <string name="Txt_escanea_qr">Escanea este código en caja</string>

    <!-- Globales -->
    <string name="Btn_agregar_carrito">Agregar al carrito</string>
    <string name="Btn_ir_inicio">Volver al Inicio</string>

    <!--Perfil de Usuario-->
    <string name="Txt_perfil">Perfil de usuario</string>
    <string name="Txt_informacion">Información: </string>
    <string name="Txt_nombres">Nombres: </string>
    <string name="Tv_nombres">Nombres completos</string>
    <string name="Txt_email">Email: </string>
    <string name="Tv_email">email@dominio.com</string>
    <string name="Txt_nacimiento">Fecha de nac: </string>
    <string name="Tv_nacimiento">DD/MM/AAAA</string>
    <string name="Txt_miembro">Miembro desde: </string>
    <string name="Tv_miembro">DD/MM/AAAA</string>
    <string name="Txt_telefono">Teléfono: </string>
    <string name="Tv_telefono">0123456789</string>
    <string name="Txt_estado_cuenta">Estado de cuenta: </string>
    <string name="Tv_estado_cuenta">No verificado</string>

    <string name="TxtOpciones">Opciones</string>
    <string name="Btn_editar_perfil">Editar Perfil</string>
    <string name="Btn_cerrar_sesion">Cerrar sesión</string>

    <!-- Editar Perfil -->
    <string name="Txt_editar_perfil">Editar perfil</string>
    <string name="Et_nombres">Nombres completos</string>
    <string name="Et_f_nac">Fecha de nac.</string>
    <string name="Cod_tef">+00</string>
    <string name="Et_telefono">Teléfono</string>
    <string name="Btn_regresar">Regresar</string>
    <string name="Btn_actualizar">Actualizar</string>
    <string name="Btn_explorar_disenos">Explorar Diseños</string>

    <!-- Cuenta Toggle -->
    <string name="Nav_perfil">Perfil</string>
    <string name="Nav_config">Config</string>
    <string name="Nav_admin">Admin</string>
    <string name="Label_contacto_redes">CONTACTO Y REDES</string>
    <string name="Label_panel_admin">PANEL DE ADMINISTRACIÓN</string>
    <string name="Txt_admin_proximamente">Funciones de administrador próximamente...</string>
    <string name="Info_instagram">Instagram: @la_casa_del_bordadito</string>
    <string name="Info_whatsapp">WhatsApp: +52 662 139 8836</string>
    <string name="Info_email_contacto">Correo: andresbordados326@gmail.com</string>
    <string name="status_activo">Activo</string>
    <string name="status_deshabilitado">Deshabilitado</string>
    <string name="Btn_eliminar">Eliminar</string>

    <string name="Label_soporte">SOPORTE</string>
    <string name="Info_soporte_chat">Chat de Soporte</string>

    <!-- icono del usuario en chats -->
    <string name="item_uid">Uid</string>
    <string name="item_nombre">Nombre</string>
    <string name="item_email">Email</string>

    <string name="tvSinUsuarios">No hay más usuarios</string>
    <string name="Et_buscar_usuario">Buscar Usuario</string>

    <!-- Chat -->
    <string name="Txt_nombre_usuario">Nombres</string>
    <string name="Et_mensaje_chat">Escriba algo</string>
    <string name="Tv_tiempo_mensaje">dd/MM/yyyy hh:mm</string>
    <string name="Btn_ir_a_chat">Ir al chat</string>

    <!-- Visualizador -->
    <string name="BtnCerrarVisualizador">Cerrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>