<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_final_login"
    android:padding="28dp"
    tools:context=".Registro_email">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">

        <!-- Título con el color más oscuro de tu paleta -->
        <TextView
            android:text="@string/Txt_registro"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/dark_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Icono con tinte dinámico para que combine -->
        <ImageView
            android:layout_marginTop="20dp"
            android:src="@drawable/registro"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:tint="@color/dark_coffee"/>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/dark_coffee"
            app:hintTextColor="@color/brown"
            android:textColorHint="@color/brown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_email"
                android:hint="@string/Et_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_coffee"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/dark_coffee"
            app:hintTextColor="@color/brown"
            android:textColorHint="@color/brown"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/stone_brown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_password"
                android:hint="@string/Et_password"
                android:inputType="textPassword"
                android:textColor="@color/dark_coffee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Repetir Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/dark_coffee"
            app:hintTextColor="@color/brown"
            android:textColorHint="@color/brown"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/stone_brown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Et_r_password"
                android:hint="@string/Et_r_password"
                android:inputType="textPassword"
                android:textColor="@color/dark_coffee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón con color stone_brown y texto en bone -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_registrar"
            android:text="@string/Btn_registrar"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:textColor="@color/bone"
            app:backgroundTint="@color/dark_coffee"
            app:cornerRadius="30dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>